--- a/login.html
+++ b/login.html
@@ -60,7 +60,8 @@
 			<div class="account-container">
 				<div class="heading-bx left">
 					<h2 class="title-head">Login to your <span>Account</span></h2>
-					<p>Don't have an account? <a href="register.html">Create one here</a></p>
+					<p>Have a reference number? <a href="register.html">Complete your registration here</a></p>
+      <p>Don't have an account? <a href="register.html">Create one here</a></p>
 				</div>	
 				<form class="contact-bx">
 					<div class="row placeani">
@@ -91,13 +92,6 @@
 						</div>
 						<div class="col-lg-12 m-b30">
 							<button name="submit" type="submit" value="Submit" class="btn button-md">Login</button>
-						</div>
-						<div class="col-lg-12">
-							<h6>Login with Social media</h6>
-							<div class="d-flex">
-								<a class="btn flex-fill m-r5 facebook" href="#"><i class="fa fa-facebook"></i>Facebook</a>
-								<a class="btn flex-fill m-l5 google-plus" href="#"><i class="fa fa-google-plus"></i>Google Plus</a>
-							</div>
 						</div>
 					</div>
 				</form>
