--- a/login.html
+++ b/login.html
@@ -60,8 +60,8 @@
 			<div class="account-container">
 				<div class="heading-bx left">
 					<h2 class="title-head">Login to your <span>Account</span></h2>
-					<p>Have a reference number? <a href="register.html">Complete your registration here</a></p>
-      <p>Don't have an account? <a href="register.html">Create one here</a></p>
+					<p>Have a Reference Number? <a href="registra.html">Continue here</a></p>
+					<p>Don't have an account? <a href="register.html">Create one here</a></p>
 				</div>	
 				<form class="contact-bx">
 					<div class="row placeani">
