--- a/register.html
+++ b/register.html
@@ -59,14 +59,18 @@
 			<div class="account-container">
 				<div class="heading-bx left">
 					<h2 class="title-head">Sign Up <span>Now</span></h2>
+					<p>Have a Reference Number? <a href="registra.html">Continue here</a></p>
 					<p>Login Your Account <a href="login.html">Click here</a></p>
+				</div>
+				<div class="heading-bx left">
+					<h6 class="title-head">Bio-Data</h6>
 				</div>	
 				<form class="contact-bx">
 					<div class="row placeani">
 						<div class="col-lg-12">
 							<div class="form-group">
 								<div class="input-group">
-									<label>Your Name</label>
+									<label>Surname</label>
 									<input name="dzName" type="text" required="" class="form-control">
 								</div>
 							</div>
@@ -74,28 +78,179 @@
 						<div class="col-lg-12">
 							<div class="form-group">
 								<div class="input-group">
-									<label>Your Email Address</label>
+									<label>First Name</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Other Names</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Office Address</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Permanent Address</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Email Address</label>
 									<input name="dzName" type="email" required="" class="form-control">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-12">
 							<div class="form-group">
-								<div class="input-group"> 
-									<label>Your Password</label>
-									<input name="dzEmail" type="password" class="form-control" required="">
+								<div class="input-group">
+									<label>Phone Number</label>
+									<input name="dzName" type="number" required="" class="form-control">
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-12 m-b30">
-							<button name="submit" type="submit" value="Submit" class="btn button-md">Sign Up</button>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Religion</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
 						</div>
 						<div class="col-lg-12">
-							<h6>Sign Up with Social media</h6>
-							<div class="d-flex">
-								<a class="btn flex-fill m-r5 facebook" href="#"><i class="fa fa-facebook"></i>Facebook</a>
-								<a class="btn flex-fill m-l5 google-plus" href="#"><i class="fa fa-google-plus"></i>Google Plus</a>
+							<div class="form-group">
+								<div class="input-group">
+									<label>Sex</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
 							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<p>Date of Birth</p>
+									<input type="date" id="dob" name="dob" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Marital Status</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Maiden Name</label>
+									<input name="dzName" type="text" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Place of Birth</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Home Town</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Nationality</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>State of Origin</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Local Government Area</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Extracurricular Activities</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+					</div>
+				<div class="heading-bx left">
+					<h6 class="title-head">Other Details</h6>
+				</div>
+				<form class="contact-bx">
+					<div class="row placeani">
+						<div class="col-lg-12">
+							<div class="form-group">
+								<div class="input-group">
+									<label>Parent/Guardian/Next of Kin</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="input-group">
+									<label>Phone Number</label>
+									<input name="dzName" type="number" required="" class="form-control">
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="input-group">
+									<label>Address</label>
+									<input name="dzName" type="text" required="" class="form-control">
+								</div>
+							</div>
+						</div>
+				<div class="heading-bx left">
+					<h6 class="title-head">Passport Photo</h6>
+				</div>
+				<p>Please select the photo to upload in jpg/png/pdf format.</p>
+				<form class="contact-bx">
+					<div class="row placeani">
+					  <div class="col-lg-12">
+						<div class="form-group">
+						  <div class="input-group">
+							<label>choose file</label>
+							<input type="file" name="document" required class="form-control">
+						  </div>
+						<div class="col-lg-12 m-b30">
+							<button name="submit" type="submit" value="Submit" class="btn button-md">Next</button>
 						</div>
 					</div>
 				</form>
@@ -117,7 +272,12 @@
 <script src="assets/vendors/masonry/filter.js"></script>
 <script src="assets/vendors/owl-carousel/owl.carousel.js"></script>
 <script src="assets/js/functions.js"></script>
-<script src="assets/js/contact.js"></script><!-- JavaScripts Files -->
+<script src="assets/js/contact.js"></script>
+<script>
+    document.getElementById('dob').addEventListener('change', function() {
+        document.getElementById('selected-dob');
+    });
+</script>
+<!-- JavaScripts Files -->
 </body>
-
 </html>
