--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 											    </ul>
 											</li>
 											<li><a href="courses.html">All Programs</a></li>
-											<li><a href="courses-details.html">Admission Requirements & Fees</a></li>
+											<li><a href="admission-req.html">Admision Requirements & Fees</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -162,7 +162,7 @@
 							<li><a href="javascript:;">Apply<i class="fa fa-chevron-down"></i></a>
 								<ul class="sub-menu">
 									<li><a href="blog-classic-grid.html">How to Apply</a></li>
-									<li><a href="courses-details.html">Admision Requirements & Fees</a></li>
+									<li><a href="admission-req.html">Admision Requirements & Fees</a></li>
 								</ul>
 							</li>
 							<li class="nav-dashboard"><a href="javascript:;">Student life<i class="fa fa-chevron-down"></i></a>
